修改 status 里的设置为立即执行而不是提示命令